Refactor Container class and add new features
- Refactored import statements to remove unused imports
- Updated variable names for clarity and consistency
- Changed the access modifier of `instance` variable to final
- Added a new method `tryTillNumberEntered` that takes a lambda expression as a parameter
- Implemented logic in `startEingabe` method to handle user input for creating a new UserStory object
- Added methods for searching, storing, loading, and exiting the program in the `startEingabe` method
- Updated comments for better readability and understanding